<resources>
    <string name="facebook_app_id">2054559918141015</string>
    <string name="fb_login_protocol_scheme">fb2054559918141015</string>
    <string name="app_name">audu</string>
    <string name="audu">audu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="holder_name">Titular</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="cvv">CVV2</string>
    <string name="add_card">Agregar</string>
</resources>